--- a/app/src/main/res/layout/activity_crop_supplier_manager.xml
+++ b/app/src/main/res/layout/activity_crop_supplier_manager.xml
@@ -30,10 +30,10 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp" android:textStyle="bold"
+                        android:textSize="16sp" 
                         android:layout_weight="0.6"
                         android:text="@string/name"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/textColor"
                         />
 
                     <EditText
@@ -63,10 +63,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
-                        android:textStyle="bold"
+                        
                         android:layout_weight="0.6"
                         android:text="@string/company"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/textColor"
                         />
                     <EditText
                         android:id="@+id/txt_crop_supplier_company"
@@ -86,10 +86,10 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp" android:textStyle="bold"
+                        android:textSize="16sp" 
                         android:layout_weight="0.6"
                         android:text="@string/tax_reg_no"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/textColor"
                         />
                     <EditText
                         android:id="@+id/txt_crop_supplier_tax_reg_number"
@@ -121,8 +121,8 @@
                         android:layout_height="wrap_content"
                         android:text="@string/phone"
                         android:layout_weight="0.6"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
+                        android:textColor="@color/textColor"
+                        
                         android:textSize="16sp" />
 
                     <EditText
@@ -154,8 +154,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/mobile"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
+                        android:textColor="@color/textColor"
+                        
                         android:textSize="16sp"
                         android:layout_weight="1"
                         />
@@ -197,9 +197,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="0.6"
                         android:text="@string/email"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/textColor"
                         android:textSize="16sp"
-                        android:textStyle="bold" />
+                         />
 
                     <EditText
                         android:id="@+id/txt_crop_supplier_email"
@@ -224,8 +224,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/opening_balance"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
+                        android:textColor="@color/textColor"
+                        
                         android:textSize="16sp" />
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -241,7 +241,7 @@
                             android:labelFor="@+id/txt_crop_spray_rate"
                             android:text="@string/ugx"
                             android:gravity="center_vertical"
-                            android:textStyle="bold"
+                            
 
                             />
                         <EditText
@@ -278,16 +278,18 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Address"
+                        android:textColor="@color/textColor"
                         android:textStyle="bold"
-                        android:textSize="18sp"/>
+                        
+                        android:textSize="16sp"/>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp" android:textStyle="bold"
+                        android:textSize="16sp" 
                         android:layout_weight="0.6"
                         android:text="@string/street"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/textColor"
                         />
                     <EditText
                         android:id="@+id/txt_crop_supplier_street"
@@ -307,10 +309,10 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp" android:textStyle="bold"
+                        android:textSize="16sp" 
                         android:layout_weight="0.6"
                         android:text="@string/city_town"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/textColor"
                         />
                     <EditText
                         android:id="@+id/txt_crop_supplier_city_town"
@@ -330,11 +332,17 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp" android:textStyle="bold"
+                        android:textSize="16sp" 
                         android:layout_weight="0.6"
                         android:text="@string/country"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/textColor"
                         />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/input_shapes_grey_spinner"
+                        android:orientation="vertical"
+                        android:padding="2.4dp">
                     <Spinner
                         android:id="@+id/txt_crop_supplier_country"
                         android:layout_width="match_parent"
@@ -342,8 +350,8 @@
                         android:layout_weight="0.4"
                         android:hint="Enter.."
                         android:entries="@array/country_list"
-                        android:background="@drawable/input_shapes"
                         android:textSize="14sp" />
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
 
@@ -353,7 +361,7 @@
                 style="@style/Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorPrimary"
+                android:backgroundTint="@color/textColor"
                 android:drawableTint="#ffffff"
                 android:text="Save "
                 android:textAllCaps="false"
