--- a/app/src/main/res/layout/crop_purchase_order_list_card.xml
+++ b/app/src/main/res/layout/crop_purchase_order_list_card.xml
@@ -26,7 +26,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
                         android:text="Kleiner Parkers"
-                        android:textColor="@color/estimates_card_currency_color"
+                        android:textColor="@color/black"
                         android:layout_marginTop="16dp"
                         android:textSize="16sp" />
                     <LinearLayout
