--- a/app/src/main/res/layout/crop_sales_order_list_card.xml
+++ b/app/src/main/res/layout/crop_sales_order_list_card.xml
@@ -23,15 +23,17 @@
 
                     <TextView
                         android:id="@+id/txt_crop_estimate_card_customer_name"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:text="Kleiner Parker Firm "
+                        android:text="Kleiner Parker Firm"
                         android:textColor="#000000"
+                        android:layout_weight="0.6"
                         android:textSize="14sp" />
                     <LinearLayout
                         android:orientation="horizontal"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
+                        android:layout_weight="0.4"
                         android:layout_height="wrap_content"
                         android:gravity="right"
                         >
@@ -41,8 +43,6 @@
                             android:id="@+id/txt_crop_estimate_card_amount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginRight="10dp"
                             android:text="UGX 300,000"
                             android:layout_marginTop="16dp"
                             android:textColor="@color/estimates_card_currency_color"
