--- a/app/src/main/res/layout/activity_crop_bill_manager.xml
+++ b/app/src/main/res/layout/activity_crop_bill_manager.xml
@@ -181,16 +181,23 @@
                             android:text="@string/terms"
                             android:textColor="@color/textColor"
                             android:textSize="12sp"
+
                              />
 
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/input_shapes_grey_spinner"
+                            android:orientation="vertical"
+                            android:padding="2.4dp">
                         <Spinner
                             android:id="@+id/txt_crop_bill_terms"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.4"
-                            android:background="@drawable/input_shapes"
                             android:entries="@array/invoice_terms_list"
                             android:textSize="14sp" />
+                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -460,7 +467,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/divider_line_color_estimates"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:padding="8dp">
 
 
                     <TextView
