--- a/app/src/main/res/layout/activity_crop_payment_bill_manager.xml
+++ b/app/src/main/res/layout/activity_crop_payment_bill_manager.xml
@@ -45,7 +45,7 @@
                     android:ems="10"
                     android:hint="Select"
                     android:inputType="none"
-                    android:background="@drawable/input_shapes"
+                    android:background="@drawable/input_shapes_grey_spinner"
                     android:textSize="14sp"
 
 
@@ -123,6 +123,12 @@
                     android:textStyle="bold"
                     android:textSize="16sp" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/input_shapes_grey_spinner"
+                    android:orientation="vertical"
+                    android:padding="2.4dp">
                 <Spinner
 
                     android:id="@+id/sp_crop_payment_bill_payment_mode"
@@ -132,10 +138,8 @@
                     android:textColor="@color/colorPrimary"
                     android:textSize="14sp"
                     android:entries="@array/sp_crop_income_expense_payment_mode"
-                    android:background="@drawable/input_shapes"
-
-
                     />
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -163,6 +167,12 @@
                         android:layout_marginRight="5dp"
                         />
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/input_shapes_grey_spinner"
+                        android:orientation="vertical"
+                        android:padding="2.4dp">
                     <Spinner
                         android:id="@+id/txt_crop_payment_bill_select_bill"
                         android:layout_width="wrap_content"
@@ -170,11 +180,12 @@
                         android:ems="10"
 
                         android:textSize="14sp"
-                        android:background="@drawable/input_shapes"
+
 
                         android:layout_marginRight="10dp"
 
                         />
+                    </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -247,19 +258,14 @@
 
             <Button
                 android:id="@+id/btn_save"
-                style="@style/Button"
+                style="@style/ButtonFinancial"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorPrimary"
+                android:backgroundTint="@color/textColor"
                 android:drawableTint="#ffffff"
                 android:text="Save "
                 android:textAllCaps="false"
                 android:textColor="#ffffff" />
-
-
-
-
-
 
         </LinearLayout>
     </ScrollView>
