--- a/app/src/main/res/layout/content_crop_estimate_manager.xml
+++ b/app/src/main/res/layout/content_crop_estimate_manager.xml
@@ -394,7 +394,7 @@
                             android:layout_weight="0.9"
                             android:background="@drawable/input_shapes"
                             android:hint="Enter.."
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:textSize="12sp"
 
                             />
@@ -499,7 +499,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/divider_line_color_estimates"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:padding="8dp">
 
 
                     <TextView
