--- a/app/src/main/res/layout/content_crop_invoice_manager.xml
+++ b/app/src/main/res/layout/content_crop_invoice_manager.xml
@@ -436,7 +436,7 @@
                             android:ems="3"
                             android:hint="Enter.."
 
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:textSize="12sp"
 
                             />
