--- a/app/src/main/res/layout/content_crop_invoices_list.xml
+++ b/app/src/main/res/layout/content_crop_invoices_list.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.CropInvoicesListActivity"
-    tools:showIn="@layout/activity_crop_invoices_list">
+    tools:showIn="@layout/activity_crop_invoices_list"
+    android:background="@color/light_gray">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
