--- a/app/src/main/res/layout/content_crop_sales_orders_list.xml
+++ b/app/src/main/res/layout/content_crop_sales_orders_list.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.CropEstimatesListActivity"
+    android:background="@color/light_gray"
     >
     <android.support.v7.widget.RecyclerView
         android:id="@+id/crop_sales_order_recyc_view"
