--- a/app/src/main/res/layout/crop_customer_list_card.xml
+++ b/app/src/main/res/layout/crop_customer_list_card.xml
@@ -11,6 +11,7 @@
         android:layout_margin="16dp"
         android:padding="8dp"
         android:paddingStart="24dp"
+        android:paddingBottom="16dp"
         android:background="@color/whiteColor"
         android:orientation="vertical">
 
@@ -18,13 +19,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="3dp"
             android:orientation="horizontal">
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
-                android:layout_weight="0.1"
+                android:layout_weight="0.9"
+                android:layout_marginTop="12dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -34,7 +34,7 @@
                     android:layout_marginRight="5dp"
                     android:text="Kiwanuka Farm Ltd"
                     android:textStyle="bold"
-                    android:textColor="#696666"
+                    android:textColor="@color/black"
                     android:textSize="14sp" />
 
 
@@ -53,8 +53,9 @@
 
             <ImageView
                 android:id="@+id/img_crop_customer_card_more"
-                android:layout_width="25dp"
-                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="0.1"
+                android:layout_height="25dp"
                 android:backgroundTint="@color/black"
                 android:textColor="@color/darker_gray"
                 app:srcCompat="@drawable/more_options_icon" />
